@@ -1,3 +1,8 @@
+1999-07-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>
+
+	* HDF5Object.m ([HDF -packObj:to:]): Improve type mismatch
+	error message.
+
 1999-07-21  Vladimir Jojic  <vjojic@chama.santafe.edu>
 
 	* directory.m: Add new global variables for different Control 
